...
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"/>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
...
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
...
